--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 license = "MIT"
 
 [dependencies]
-axum = "0.4"
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
-tracing = "0.1"
-tracing-subscriber = "0.3"
-tower-http = { version = "0.2", features = ["fs", "trace"] }
 once_cell = "1.9"
+tower = "0.4"
+tower-http = { version = "0.2", features = ["fs", "trace"] }
+axum = "0.4"
+tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
+tracing-subscriber = "0.3.5"
+tracing = "0.1"
