--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "common"
+name = "you-vid-common"
 version = "0.1.0"
+authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
 edition = "2021"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
