--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,5 @@ axum = "0.4"
 tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.5"
 tracing = "0.1"
+sql-builder = "3.1"
+rusqlite = "0.26"
