--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "you-vid-common"
+name = "common"
 version = "0.1.0"
 authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
 edition = "2021"
@@ -9,3 +9,4 @@ license = "MIT"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+dryoc = "0.3"
