--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "you-vid-backend"
+name = "backend"
 version = "0.1.0"
 authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
 edition = "2021"
@@ -16,3 +16,4 @@ tracing-subscriber = "0.3.5"
 tracing = "0.1"
 sql-builder = "3.1"
 rusqlite = "0.26"
+dryoc = "0.3"
