--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,4 +16,4 @@ tracing-subscriber = "0.3.5"
 tracing = "0.1"
 sql-builder = "3.1"
 rusqlite = "0.26"
-dryoc = "0.3"
+dryoc = { version = "0.3", features = ["serde"] }
