--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 once_cell = "1.9"
 tower = "0.4"
 tower-http = { version = "0.2", features = ["fs", "trace"] }
@@ -14,6 +15,6 @@ axum = "0.4"
 tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.5"
 tracing = "0.1"
-sql-builder = "3.1"
-rusqlite = "0.26"
 dryoc = { version = "0.3", features = ["serde"] }
+sled = "0.34"
+common = { path = "../common" }
