--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,3 +10,4 @@ license = "MIT"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 dryoc = { version = "0.3", features = ["serde"] }
+once_cell = "1.9"
