--- a/frontend/client/Cargo.toml
+++ b/frontend/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "frontend"
+name = "frontend-client"
 version = "0.1.0"
 authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
 edition = "2021"
@@ -13,10 +13,9 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wee_alloc = "0.4"
 
 # frontend
-yew = "0.19"
+percy-dom = "0.7"
 js-sys = "0.3"
 gloo = "0.6"
-yew-router = "0.16"
 web-sys = { version = "0.3", features = [
   "Response",
   "Request",
@@ -27,4 +26,4 @@ serde = { version = "1.0.80", features = ["derive"] }
 wasm-bindgen-futures = "0.4"
 futures = "0.3"
 
-common = { path = "../common" }
+common = { path = "../../common" }
