--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,2 @@
 tasks:
-  - init: cargo install cargo-make && cargo install wasm-pack && cargo make build
-    command: cargo make run
+    - command: cargo run
