--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
-[workspace]
-members = ["backend", "frontend/client", "frontend/server", "common"]
+[package]
+name = "you-vid"
+version = "0.1.0"
+edition = "2021"
 
-[profile.release]
-opt-level = 3
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[profile.release.package.frontend-client]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+[dependencies]
+percy-dom = "0.7"
+tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1.0", features = ["derive"] }
+tide = "0.16"
+substrate-wasm-builder = "4.0"
