--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-/target
+/target/
+/web-target/
 /**/*.rs.bk
 /Cargo.lock
-/bin/
-/frontend/pkg/
-wasm-pack.log
-
-
-# Added by cargo
-#
-# already existing elements were commented out
-
-#/target
