--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,3 +2,4 @@
 channel = "nightly-2021-12-05"
 components = ["clippy", "rls", "rust-src", "rust-analysis"]
 profile = "default"
+targets = ["wasm32-unknown-unknown"]
