--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
-tide = "0.16"
+hyper = { version = "0.14", features = ["full"] }
+rust-embed = { version = "6.3", features = ["interpolate-folder-path"] }
+lazy_static = "1.0"
+futures = "0.3"
 client = { path = "../client" }
 
 [build-dependencies]
